--- a/web/client/investigacion.xhtml
+++ b/web/client/investigacion.xhtml
@@ -1,14 +1,50 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../TemplateClient.xhtml">
 
             <ui:define name="content">
-                content
+                <h3>Trabajos de Investigacion</h3>
+                <h:dataTable value="#{trabajoInvestigacionBean.trabajos}" var="objeto" class="table table-bordered">
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputLabel value="Identificador" />
+                        </f:facet>
+                        <h:outputLabel value="#{objeto.id}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputLabel value="Titulo" />
+                        </f:facet>
+                        <h:outputLabel value="#{objeto.titulo}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputLabel value="Fecha Inicio" />
+                        </f:facet>
+                        <h:outputLabel value="#{objeto.fechaInicio}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputLabel value="Fecha Fin" />
+                        </f:facet>
+                        <h:outputLabel value="#{objeto.fechaFin}" />
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputLabel value="Opciones" />
+                        </f:facet>
+                        <p:commandButton value="Modificar" class="btn btn-warning"/>
+                        <p:commandButton value="Elimnar" class="btn btn-danger"/>
+                    </h:column>
+                </h:dataTable>
             </ui:define>
 
         </ui:composition>
