se esta trabajando en los eventos

--- a/web/TemplateClient.xhtml
+++ b/web/TemplateClient.xhtml
@@ -26,6 +26,7 @@
                         <li><a href="ponencia.xhtml?identificacion=#{clienteBean.identificacion}">Ponencia</a></li> 
                         <li><a href="articulo.xhtml?identificacion=#{clienteBean.identificacion}">Articulo</a></li>
                         <li><a href="libro.xhtml?identificacion=#{clienteBean.identificacion}">Libro</a></li>
+                        <li><a href="evento.xhtml?identificacion=#{clienteBean.identificacion}">Evento</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
