--- a/web/client/evento.xhtml
+++ b/web/client/evento.xhtml
@@ -55,7 +55,7 @@
                             <h:outputLabel value="Opciones" />
                         </f:facet>
                         <p:commandButton value="Modificar" class="btn btn-warning"/>
-                        <p:commandButton value="Elimnar" class="btn btn-danger"/>
+                        <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{eventoBean.eliminarEvento(objeto)}"/>
                     </h:column>
                 </h:dataTable>
                 <br/>
