--- a/web/client/evento.xhtml
+++ b/web/client/evento.xhtml
@@ -54,7 +54,7 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Opciones" />
                             </f:facet>
-                            <p:commandButton id="editButton" value="modificar" update=":eventomid" oncomplete="#{eventoBean.modificarEvento(objeto)}"/>
+                            <p:commandButton value="modificar" actionListener="#{eventoBean.inicializarDialogoModificar()}"/>
                             <p:commandButton value="Modificar" class="btn btn-warning" onclick="#{eventoBean.modificarEvento(objeto)}"/>
                             <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{eventoBean.eliminarEvento(objeto)}"/>
                         </h:column>
