--- a/web/TemplateClient.xhtml
+++ b/web/TemplateClient.xhtml
@@ -27,6 +27,7 @@
                         <li><a href="articulo.xhtml?identificacion=#{clienteBean.identificacion}">Articulo</a></li>
                         <li><a href="libro.xhtml?identificacion=#{clienteBean.identificacion}">Libro</a></li>
                         <li><a href="evento.xhtml?identificacion=#{clienteBean.identificacion}">Evento</a></li>
+                        <li><a href="revista.xhtml?identificacion=#{clienteBean.identificacion}">Revista</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
