--- a/web/client/revista.xhtml
+++ b/web/client/revista.xhtml
@@ -36,13 +36,49 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Opciones" />
                             </f:facet>
-                            <p:commandButton value="Modificar" class="btn btn-warning" oncomplete="PF('modificar').show()" title="View">
-                                <f:setPropertyActionListener value="#{objeto}" target="#{eventoBean.eventoModificar}" />
+                            <p:commandButton value="Modificar" class="btn btn-warning" oncomplete="PF('modificar').show()" title="View" update=":revistamodificar">
+                                <f:setPropertyActionListener value="#{objeto}" target="#{revistaBean.revistaModificar}" />
                             </p:commandButton>
-                            <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{eventoBean.eliminarEvento(objeto)}"/>
+                            <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{revistaBean.eliminarRevista(objeto)}"/>
                         </h:column>
                     </h:dataTable>
+                    <br/>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <br/>
+                    <p:commandButton value="Agregar" class="btn btn-success" update=":revistaagregar" oncomplete="PF('agregar').show();">
+                        <f:setPropertyActionListener value="#{revistaBean.identificacion}" target="#{revistaBean.identificacion}" />
+                    </p:commandButton>
                 </h:form>
+                <p:dialog header="Agregar" widgetVar="agregar" width="430" modal="true" resizable="false" >
+                    <h:form id="revistaagregar">
+                        <p:panelGrid columns="2">
+                            <h:outputLabel value="Nombre:"/>
+                            <h:inputText value="#{revistaBean.revistaAgregar.nombre}"/>
+                            <h:outputLabel value="Indexada:"/>
+                            <h:inputText value="#{revistaBean.revistaAgregar.indexada}"/>
+                            <h:outputLabel value="Categorizacio"/>
+                            <h:inputText value="#{revistaBean.revistaAgregar.categorizacion}"/>
+                        </p:panelGrid> 
+                        <br/>
+                        <p:commandButton value="Agregar" oncomplete="handleSubmit(args,'PF('agregar')');" actionListener="#{revistaBean.agregarRevista()}"/>
+                        <p:commandButton value="Cancelar" onclick="PF('agregar').hide();"/>
+                    </h:form>    
+                </p:dialog>
+                <p:dialog header="Modificar" widgetVar="modificar" width="430" modal="true" resizable="false">
+                    <h:form id="revistamodificar">
+                        <p:panelGrid columns="2">
+                            <h:outputLabel value="Nombre:"/>
+                            <h:inputText value="#{revistaBean.revistaModificar.nombre}"/>
+                            <h:outputLabel value="Indexada:"/>
+                            <h:inputText value="#{revistaBean.revistaModificar.indexada}"/>
+                            <h:outputLabel value="Categorizacio"/>
+                            <h:inputText value="#{revistaBean.revistaModificar.categorizacion}"/>
+                        </p:panelGrid>
+                        <br/>
+                        <p:commandButton value="Modificar" oncomplete="handleSubmit(args,'PF('modificar')');" actionListener="#{revistaBean.modificarRevista()}"/>
+                        <p:commandButton value="Cancelar" onclick="PF('modificar').hide();"/>
+                    </h:form>
+                </p:dialog>
             </ui:define>
 
         </ui:composition>
