se esta trabajando en las editoriales

--- a/web/TemplateClient.xhtml
+++ b/web/TemplateClient.xhtml
@@ -26,7 +26,7 @@
                         <li><a href="ponencia.xhtml?identificacion=#{clienteBean.identificacion}">Ponencia</a></li>
                         <li><a href="evento.xhtml?identificacion=#{clienteBean.identificacion}">Evento</a></li>
                         <li><a href="revista.xhtml?identificacion=#{clienteBean.identificacion}">Revista</a></li>
-                    </ul>
+                        <li><a href="editorial.xhtml?identificacion=#{clienteBean.identificacion}">Editorial</a></li>                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
