--- a/web/client/editorial.xhtml
+++ b/web/client/editorial.xhtml
@@ -43,45 +43,47 @@
                                 <h:outputLabel value="Opciones" />
                             </f:facet>
                             <p:commandButton value="Modificar" class="btn btn-warning" oncomplete="PF('modificar').show()" title="View" update=":editorialmodificar">
-                                <f:setPropertyActionListener value="#{objeto}" target="#{revistaBean.revistaModificar}" />
+                                <f:setPropertyActionListener value="#{objeto}" target="#{editorialBean.editorialModificar}" />
                             </p:commandButton>
-                            <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{revistaBean.eliminarRevista(objeto)}"/>
+                            <p:commandButton value="Elimnar" class="btn btn-danger" actionListener="#{editorialBean.eliminarEditorial(objeto)}"/>
                         </h:column>
                     </h:dataTable>
                     <br/>
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                     <br/>
                     <p:commandButton value="Agregar" class="btn btn-success" update=":editorialagregar" oncomplete="PF('agregar').show();">
-                        <f:setPropertyActionListener value="#{revistaBean.identificacion}" target="#{revistaBean.identificacion}" />
+                        <f:setPropertyActionListener value="#{editorialBean.identificacion}" target="#{editorialBean.identificacion}" />
                     </p:commandButton>
                 </h:form>
                 <p:dialog header="Agregar" widgetVar="agregar" width="430" modal="true" resizable="false" >
                     <h:form id="editorialagregar">
                         <p:panelGrid columns="2">
                             <h:outputLabel value="Nombre:"/>
-                            <h:inputText />
+                            <h:inputText value="#{editorialBean.editorialAgregar.nombre}"/>
                             <h:outputLabel value="Ciudad"/>
-                            <h:inputText />
+                            <h:inputText value="#{editorialBean.editorialAgregar.ciudad}"/>
                             <h:outputLabel value="Pais"/>
-                            <h:inputText />
+                            <h:inputText value="#{editorialBean.editorialAgregar.pais}"/>
                         </p:panelGrid>
                         <br/>
-                        <p:commandButton value="Agregar" oncomplete="handleSubmit(args,'PF('agregar')');"/>
+                        <p:commandButton value="Agregar" oncomplete="handleSubmit(args,'PF('agregar')');" actionListener="#{editorialBean.agregarEditorial()}"/>
                         <p:commandButton value="Cancelar" onclick="PF('agregar').hide();"/>
                     </h:form>
                 </p:dialog>
                 <p:dialog header="Modificar" widgetVar="modificar" width="430" modal="true" resizable="false">
                     <h:form id="editorialmodificar">
                         <p:panelGrid columns="2">
+                            <h:outputLabel value="Identificador:"/>
+                            <h:inputText value="#{editorialBean.editorialModificar.id}"/>
                             <h:outputLabel value="Nombre:"/>
-                            <h:inputText />
-                            <h:outputLabel value="Ciudad"/>
-                            <h:inputText />
-                            <h:outputLabel value="Pais"/>
-                            <h:inputText />
+                            <h:inputText value="#{editorialBean.editorialModificar.nombre}"/>
+                            <h:outputLabel value="Ciudad:"/>
+                            <h:inputText value="#{editorialBean.editorialModificar.ciudad}"/>
+                            <h:outputLabel value="Pais:"/>
+                            <h:inputText value="#{editorialBean.editorialModificar.pais}"/>
                         </p:panelGrid>
                         <br/>
-                        <p:commandButton value="Modificar" oncomplete="handleSubmit(args,'PF('modificar')');"/>
+                        <p:commandButton value="Modificar" oncomplete="handleSubmit(args,'PF('modificar')');" actionListener="#{editorialBean.modoficarEditorial()}"/>
                         <p:commandButton value="Cancelar" onclick="PF('modificar').hide();"/>
                     </h:form>
                 </p:dialog>
