--- a/web/TemplateClient.xhtml
+++ b/web/TemplateClient.xhtml
@@ -28,8 +28,7 @@
                         <li><a href="revista.xhtml?identificacion=#{clienteBean.identificacion}">Revista</a></li>
                         <li><a href="editorial.xhtml?identificacion=#{clienteBean.identificacion}">Editorial</a></li>                    </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="./../index.xhtml"><span class="glyphicon glyphicon-log-in"></span> Salir</a></li>
                     </ul>
                 </div>
             </div>
