se acomodaron los etilos

--- a/web/TemplateClient.xhtml
+++ b/web/TemplateClient.xhtml
@@ -7,9 +7,9 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>CVLAC</title>
-        <h:outputStylesheet name="./css/bootstrap-theme.css"/>
-        <h:outputStylesheet name="./css/bootstrap.css"/>
-        <h:outputScript name="./js/bootstrap.js"/>
+        <h:outputStylesheet name="css/bootstrap-theme.css"/>
+        <h:outputStylesheet name="css/bootstrap.css"/>
+        <h:outputScript name="js/bootstrap.js"/>
     </h:head>
 
     <h:body>
