--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,9 +5,9 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>CVLAC</title>
-        <h:outputStylesheet name="./css/bootstrap-theme.css"/>
-        <h:outputStylesheet name="./css/bootstrap.css"/>
-        <h:outputScript name="./js/bootstrap.js"/>
+        <h:outputStylesheet name="css/bootstrap-theme.css"/>
+        <h:outputStylesheet name="css/bootstrap.css"/>
+        <h:outputScript name="js/bootstrap.js"/>
     </h:head>
     <h:body>
         <nav class="navbar navbar-inverse">
